# simple-cors-proxy

./: Cargo.toml  LICENSE
src/: main.rs
