[package]
name = "simple-cors-proxy"
version = "0.1.0"
authors = ["Nam Junghyun <ska827@snu.ac.kr>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.13.0"
surf = "1.0.3"
anyhow = "1.0.32"
async-std = { version = "1.6.0", features = ["attributes"] }